--- a/app/src/main/res/values-da-rDK/strings.xml
+++ b/app/src/main/res/values-da-rDK/strings.xml
@@ -106,6 +106,10 @@
     <string name="settings_filter_strength">Filterstyrke</string>
     <string name="settings_select_launcher_font">Vælg en Skrifttypefamilie</string>
     <string name="settings_launcher_font">Skrifttype</string>
+    <string name="settings_select_icons">Vælg en ikontype</string>
+    <string name="settings_icons">Ikontype</string>
+    <string name="settings_icons_easy_dots">Easy Dots</string>
+    <string name="settings_icons_niagara_dots">Niagara prikker</string>
     <string name="settings_reload_app_backup">Præferencer sikkerhedskopieret.</string>
     <string name="settings_reload_app_restore">Præferencer gendannet. Genstarter.</string>
     <string name="settings_actions_open_app">Åbn App</string>
@@ -123,6 +127,7 @@
     <string name="settings_actions_disabled">Handicappet</string>
     <string name="settings_units_metric">Metrisk</string>
     <string name="settings_units_imperial">Kejserlig</string>
+    <string name="settings_system">System</string>
     <string name="authentication_title">Godkendelse</string>
     <string name="authentication_subtitle">Log ind med dine biometriske legitimationsoplysninger.</string>
     <string name="authentication_cancel">Godkendelse Annuller</string>
