--- a/app/src/main/res/values-sk-rSK/strings.xml
+++ b/app/src/main/res/values-sk-rSK/strings.xml
@@ -106,6 +106,10 @@
     <string name="settings_filter_strength">Sila filtra</string>
     <string name="settings_select_launcher_font">Vyberte rodinu písiem</string>
     <string name="settings_launcher_font">Rodina písiem</string>
+    <string name="settings_select_icons">Vyberte typ ikony</string>
+    <string name="settings_icons">Typ ikony</string>
+    <string name="settings_icons_easy_dots">Jednoduché bodky</string>
+    <string name="settings_icons_niagara_dots">Niagarské bodky</string>
     <string name="settings_reload_app_backup">Predvoľby sú zálohované.</string>
     <string name="settings_reload_app_restore">Predvoľby boli obnovené. Reštartovanie.</string>
     <string name="settings_actions_open_app">Otvorte aplikáciu</string>
@@ -123,6 +127,7 @@
     <string name="settings_actions_disabled">Zakázané</string>
     <string name="settings_units_metric">Metrické</string>
     <string name="settings_units_imperial">cisársky</string>
+    <string name="settings_system">systém</string>
     <string name="authentication_title">Overenie</string>
     <string name="authentication_subtitle">Prihláste sa pomocou svojich biometrických údajov.</string>
     <string name="authentication_cancel">Zrušenie overenia</string>
