--- a/app/src/main/res/values-de-rDE/strings.xml
+++ b/app/src/main/res/values-de-rDE/strings.xml
@@ -120,10 +120,12 @@
     <string name="settings_actions_show_favorite_list">Favoritenliste anzeigen</string>
     <string name="settings_actions_show_hidden_list">Versteckte Liste anzeigen</string>
     <string name="settings_actions_open_quick_settings">Schnelleinstellungen öffnen</string>
+    <string name="settings_actions_open_launcher_settings">Launcher-Einstellungen öffnen</string>
     <string name="settings_actions_show_recents">Zuletzt verwendetes anzeigen</string>
     <string name="settings_actions_show_widgets">Widgets anzeigen</string>
     <string name="settings_actions_open_power_dialog">Dialogfeld „Power“ öffnen</string>
     <string name="settings_actions_take_a_screenshot">Mach ein Bildschirmfoto</string>
+    <string name="settings_actions_open_digital_wellbeing">Offenes digitales Wohlbefinden</string>
     <string name="settings_actions_disabled">Deaktiviert</string>
     <string name="settings_units_metric">Metrisch</string>
     <string name="settings_units_imperial">Kaiserliche</string>
