--- a/app/src/main/res/values-iw-rIL/strings.xml
+++ b/app/src/main/res/values-iw-rIL/strings.xml
@@ -77,6 +77,7 @@
     <string name="settings_display_auto_open_apps">פתח אוטומטית את האפליקציה האחרונה</string>
     <string name="settings_search_from_start">חפש מההתחלה</string>
     <string name="settings_display_lock_settings">הגדרות נעילה</string>
+    <string name="settings_display_disable_animations">השבת אנימציות</string>
     <string name="settings_appearance_text_size_title">גודל</string>
     <string name="settings_appearance_color_title">צבע</string>
     <string name="settings_appearance_alignment_title">יישור</string>
