--- a/app/src/main/res/values-sk-rSK/strings.xml
+++ b/app/src/main/res/values-sk-rSK/strings.xml
@@ -77,6 +77,7 @@
     <string name="settings_display_auto_open_apps">Automatické otvorenie poslednej aplikácie</string>
     <string name="settings_search_from_start">Hľadať od začiatku</string>
     <string name="settings_display_lock_settings">Nastavenia zámku</string>
+    <string name="settings_display_disable_animations">Zakázať animácie</string>
     <string name="settings_appearance_text_size_title">Veľkosť</string>
     <string name="settings_appearance_color_title">Farba</string>
     <string name="settings_appearance_alignment_title">Zarovnanie</string>
