--- a/app/src/main/res/values-tr-rTR/strings.xml
+++ b/app/src/main/res/values-tr-rTR/strings.xml
@@ -77,6 +77,7 @@
     <string name="settings_display_auto_open_apps">Son Uygulamayı Otomatik Aç</string>
     <string name="settings_search_from_start">Baştan Arama</string>
     <string name="settings_display_lock_settings">Kilit Ayarları</string>
+    <string name="settings_display_disable_animations">Animasyonları devre dışı bırak</string>
     <string name="settings_appearance_text_size_title">Boyut</string>
     <string name="settings_appearance_color_title">Renk</string>
     <string name="settings_appearance_alignment_title">Hizalama</string>
