--- a/app/src/main/res/values-da-rDK/strings.xml
+++ b/app/src/main/res/values-da-rDK/strings.xml
@@ -75,6 +75,7 @@
     <string name="settings_display_app_icons">Vis App-ikoner</string>
     <string name="settings_display_automatic_keyboard">Auto-vis Tastatur</string>
     <string name="settings_display_auto_open_apps">Auto-åbn Sidste App</string>
+    <string name="settings_home_alignment_bottom">Hjemmejustering Bund</string>
     <string name="settings_search_from_start">Søg fra start</string>
     <string name="settings_display_lock_settings">Lås Indstillinger</string>
     <string name="settings_display_disable_animations">Deaktiver animationer</string>
