--- a/app/src/main/res/values-iw-rIL/strings.xml
+++ b/app/src/main/res/values-iw-rIL/strings.xml
@@ -75,6 +75,7 @@
     <string name="settings_display_app_icons">הצג סמלי אפליקציה</string>
     <string name="settings_display_automatic_keyboard">Auto Show Keyboard</string>
     <string name="settings_display_auto_open_apps">פתח אוטומטית את האפליקציה האחרונה</string>
+    <string name="settings_home_alignment_bottom">יישור ביתי תחתית</string>
     <string name="settings_search_from_start">חפש מההתחלה</string>
     <string name="settings_display_lock_settings">הגדרות נעילה</string>
     <string name="settings_display_disable_animations">השבת אנימציות</string>
