--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -140,6 +140,9 @@
     <string name="settings_select_filter_strength">Select a Filter Strength</string>
     <string name="settings_filter_strength">Filter Strength</string>
 
+    <string name="settings_select_swipe_threshold">Select a Swipe Threshold</string>
+    <string name="settings_swipe_threshold">Swipe Threshold</string>
+
     <string name="settings_select_launcher_font">Select a Font Family</string>
     <string name="settings_launcher_font">Font Family</string>
 
@@ -172,6 +175,8 @@
     <string name="settings_units_imperial">Imperial</string>
 
     <string name="settings_system">System</string>
+    <string name="settings_ok">Ok</string>
+    <string name="settings_cancel">Cancel</string>
 
     <string name="authentication_title">Authentication</string>
     <string name="authentication_subtitle">Log in using your biometric credentials.</string>
