Just a Typo spelling mistake

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -175,7 +175,7 @@
     <string name="settings_units_imperial">Imperial</string>
 
     <string name="settings_system">System</string>
-    <string name="settings_ok">Ok</string>
+    <string name="settings_ok">OK</string>
     <string name="settings_cancel">Cancel</string>
 
     <string name="authentication_title">Authentication</string>
