--- a/app/src/main/res/values-da-rDK/strings.xml
+++ b/app/src/main/res/values-da-rDK/strings.xml
@@ -106,6 +106,8 @@
     <string name="settings_app_language">App sprog</string>
     <string name="settings_select_filter_strength">Vælg en filterstyrke</string>
     <string name="settings_filter_strength">Filterstyrke</string>
+    <string name="settings_select_swipe_threshold">Vælg en swipe-tærskel</string>
+    <string name="settings_swipe_threshold">Swipe Threshold</string>
     <string name="settings_select_launcher_font">Vælg en Skrifttypefamilie</string>
     <string name="settings_launcher_font">Skrifttype</string>
     <string name="settings_select_icons">Vælg en ikontype</string>
@@ -132,6 +134,8 @@
     <string name="settings_units_metric">Metrisk</string>
     <string name="settings_units_imperial">Kejserlig</string>
     <string name="settings_system">System</string>
+    <string name="settings_ok">OK</string>
+    <string name="settings_cancel">Ophæve</string>
     <string name="authentication_title">Godkendelse</string>
     <string name="authentication_subtitle">Log ind med dine biometriske legitimationsoplysninger.</string>
     <string name="authentication_cancel">Godkendelse Annuller</string>
