--- a/app/src/main/res/values-uk-rUA/strings.xml
+++ b/app/src/main/res/values-uk-rUA/strings.xml
@@ -106,6 +106,8 @@
     <string name="settings_app_language">Мова програми</string>
     <string name="settings_select_filter_strength">Виберіть інтенсивність фільтра</string>
     <string name="settings_filter_strength">Міцність фільтра</string>
+    <string name="settings_select_swipe_threshold">Виберіть межу пальця</string>
+    <string name="settings_swipe_threshold">Проведіть порогове значення</string>
     <string name="settings_select_launcher_font">Виберіть сімейство шрифтів</string>
     <string name="settings_launcher_font">Сімейство шрифтів</string>
     <string name="settings_select_icons">Виберіть тип значка</string>
@@ -132,6 +134,8 @@
     <string name="settings_units_metric">Метрика</string>
     <string name="settings_units_imperial">Імператорський</string>
     <string name="settings_system">система</string>
+    <string name="settings_ok">добре</string>
+    <string name="settings_cancel">Скасувати</string>
     <string name="authentication_title">Аутентифікація</string>
     <string name="authentication_subtitle">Увійдіть, використовуючи свої біометричні облікові дані.</string>
     <string name="authentication_cancel">Автентифікація Скасувати</string>
