--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,6 +16,9 @@
     <string name="settings_look_feel_title">Look and Feel</string>
     <string name="settings_look_feel_description">Give your home screen a personal touch.</string>
 
+    <string name="settings_widgets_title">Widgets</string>
+    <string name="settings_widgets_description">Give your home screen some widgets.</string>
+
     <string name="settings_advanced_title">Advanced</string>
 
     <!-- Strings used for look And feel settings -->
@@ -221,6 +224,8 @@
     <string name="acra_send_report">Send Report</string>
     <string name="acra_dont_send">Don\'t Send</string>
     <string name="acra_mail_body">A crash has occurred in the application.\n\nBelow are the details of the device. The error log has been attached as a file for your reference. We would appreciate your assistance in resolving this issue.\n\nDevice Information: \n[PLEASE fill in the information below also removing anything between the square brackets or this will be ignored.]\n\n- App Version: [11.11.11]\n- Android Version: [Apple 1.16]\n- Device Name: [Android Apple Phone 69]\n- Install Location: [Github, Fdroid, Obtanium, Tesla Space Station]\n\nYour prompt attention to this matter is greatly appreciated.\n\nThank you.\n</string>
+
+    <string name="admin_permission_message">mLauncher promises to use lock screen permission responsibly. mLauncher does not collect or share any data.</string>
 
     <string-array name="alignment_options">
         <item>Left</item>
