--- a/app/src/main/res/values-cs-rCZ/strings.xml
+++ b/app/src/main/res/values-cs-rCZ/strings.xml
@@ -27,9 +27,11 @@
     <string name="advanced_settings_restart_description">Zkoušel jsi to zapnout a vypnout?</string>
     <string name="advanced_settings_backup_restore_title">Zálohování/obnovení</string>
     <string name="advanced_settings_backup_restore_description">Dávejte si prosím pozor na to, co si přejete?</string>
-    <string name="advanced_settings_backup_restore_backup">Předvolby zálohování</string>
-    <string name="advanced_settings_backup_restore_restore">Obnovit předvolby</string>
-    <string name="advanced_settings_backup_restore_clear">Vymazat předvolby</string>
+    <string name="advanced_settings_backup_restore_backup_prefs">Předvolby zálohování</string>
+    <string name="advanced_settings_backup_restore_restore_prefs">Obnovit předvolby</string>
+    <string name="advanced_settings_backup_restore_backup_apps">Zálohovací aplikace</string>
+    <string name="advanced_settings_backup_restore_restore_apps">Obnovit aplikace</string>
+    <string name="advanced_settings_backup_restore_clear">Vymazat všechna data</string>
     <string name="advanced_settings_backup_restore_clear_title">Vymazat předvolby</string>
     <string name="advanced_settings_backup_restore_clear_description">Opravdu to chcete udělat?</string>
     <string name="advanced_settings_backup_restore_clear_yes">Ano</string>
