--- a/app/src/main/res/values-da-rDK/strings.xml
+++ b/app/src/main/res/values-da-rDK/strings.xml
@@ -27,9 +27,11 @@
     <string name="advanced_settings_restart_description">Har du prøvet at tænde og slukke for den?</string>
     <string name="advanced_settings_backup_restore_title">Sikkerhedskopiering/gendannelse</string>
     <string name="advanced_settings_backup_restore_description">Vær venligst forsigtig med hvad du ønsker dig?</string>
-    <string name="advanced_settings_backup_restore_backup">Sikkerhedskopieringsindstillinger</string>
-    <string name="advanced_settings_backup_restore_restore">Gendan præferencer</string>
-    <string name="advanced_settings_backup_restore_clear">Ryd præferencer</string>
+    <string name="advanced_settings_backup_restore_backup_prefs">Sikkerhedskopieringspræferencer</string>
+    <string name="advanced_settings_backup_restore_restore_prefs">Gendan præferencer</string>
+    <string name="advanced_settings_backup_restore_backup_apps">Backup apps</string>
+    <string name="advanced_settings_backup_restore_restore_apps">Gendan apps</string>
+    <string name="advanced_settings_backup_restore_clear">Ryd alle data</string>
     <string name="advanced_settings_backup_restore_clear_title">Ryd præferencer</string>
     <string name="advanced_settings_backup_restore_clear_description">Er du sikker på, at du vil gøre dette?</string>
     <string name="advanced_settings_backup_restore_clear_yes">Ja</string>
