--- a/app/src/main/res/values-de-rDE/strings.xml
+++ b/app/src/main/res/values-de-rDE/strings.xml
@@ -27,9 +27,11 @@
     <string name="advanced_settings_restart_description">Haben Sie versucht, es ein- und auszuschalten?</string>
     <string name="advanced_settings_backup_restore_title">Sichern/Wiederherstellen</string>
     <string name="advanced_settings_backup_restore_description">Bitte seien Sie vorsichtig mit Ihren Wünschen.</string>
-    <string name="advanced_settings_backup_restore_backup">Sicherungseinstellungen</string>
-    <string name="advanced_settings_backup_restore_restore">Einstellungen wiederherstellen</string>
-    <string name="advanced_settings_backup_restore_clear">Einstellungen löschen</string>
+    <string name="advanced_settings_backup_restore_backup_prefs">Sicherungseinstellungen</string>
+    <string name="advanced_settings_backup_restore_restore_prefs">Einstellungen wiederherstellen</string>
+    <string name="advanced_settings_backup_restore_backup_apps">Backup-Apps</string>
+    <string name="advanced_settings_backup_restore_restore_apps">Apps wiederherstellen</string>
+    <string name="advanced_settings_backup_restore_clear">Alle Daten löschen</string>
     <string name="advanced_settings_backup_restore_clear_title">Einstellungen löschen</string>
     <string name="advanced_settings_backup_restore_clear_description">Möchten Sie das wirklich tun?</string>
     <string name="advanced_settings_backup_restore_clear_yes">Ja</string>
