--- a/app/src/main/res/values-nl-rNL/strings.xml
+++ b/app/src/main/res/values-nl-rNL/strings.xml
@@ -27,9 +27,11 @@
     <string name="advanced_settings_restart_description">Heb je geprobeerd het aan en uit te zetten?</string>
     <string name="advanced_settings_backup_restore_title">Back-up/Herstellen</string>
     <string name="advanced_settings_backup_restore_description">Wees voorzichtig met wat je wenst.</string>
-    <string name="advanced_settings_backup_restore_backup">Back-up voorkeuren</string>
-    <string name="advanced_settings_backup_restore_restore">Voorkeuren herstellen</string>
-    <string name="advanced_settings_backup_restore_clear">Voorkeuren wissen</string>
+    <string name="advanced_settings_backup_restore_backup_prefs">Back-upvoorkeuren</string>
+    <string name="advanced_settings_backup_restore_restore_prefs">Voorkeuren herstellen</string>
+    <string name="advanced_settings_backup_restore_backup_apps">Back-up-apps</string>
+    <string name="advanced_settings_backup_restore_restore_apps">Apps herstellen</string>
+    <string name="advanced_settings_backup_restore_clear">Alle gegevens wissen</string>
     <string name="advanced_settings_backup_restore_clear_title">Voorkeuren wissen</string>
     <string name="advanced_settings_backup_restore_clear_description">Weet u zeker dat u dit wilt doen?</string>
     <string name="advanced_settings_backup_restore_clear_yes">Ja</string>
