--- a/app/src/main/res/values-lt-rLT/strings.xml
+++ b/app/src/main/res/values-lt-rLT/strings.xml
@@ -178,6 +178,7 @@
     <string name="acra_dont_send">Nesiųsti</string>
     <string name="acra_mail_body">Programoje įvyko gedimas.\n\nŽemiau pateikiama išsami informacija apie įrenginį. Klaidų žurnalas buvo pridėtas kaip failas jūsų nuorodai. Būsime dėkingi už pagalbą sprendžiant šią problemą.\n\nĮrenginio informacija: \n[PRAŠOME užpildyti toliau pateiktą informaciją, taip pat pašalinant bet ką tarp laužtinių skliaustų, kitaip tai bus nepaisoma.]\n\n- Programos versija: [11.11.11]\n– Android versija: [Apple 1.16]\n– Įrenginio pavadinimas: [Android Apple Phone 69]\n– Diegimo vieta: [Github, Fdroid, Obtanium, Tesla kosminė stotis]\n\nLabai vertiname Jūsų greitą dėmesį šiuo klausimu.\n\nAčiū.\n</string>
     <string name="admin_permission_message">„mLauncher“ žada atsakingai naudoti užrakinimo ekrano leidimą. „mLauncher“ nerenka ir nebendrina jokių duomenų.</string>
+    <string name="work_permission_message">Norėdami atlikti šį veiksmą, turite naudoti darbo profilio tvarkyklę.</string>
     <string-array name="alignment_options">
         <item>Kairė</item>
         <item>centras</item>
