--- a/app/src/main/res/values-nl-rNL/strings.xml
+++ b/app/src/main/res/values-nl-rNL/strings.xml
@@ -178,6 +178,7 @@
     <string name="acra_dont_send">Niet verzenden</string>
     <string name="acra_mail_body">Er is een crash opgetreden in de applicatie.\n\nHieronder staan de details van het apparaat. Het foutenlogboek is als bestand bijgevoegd ter referentie. Wij stellen uw hulp bij het oplossen van dit probleem op prijs.\n\nApparaatinformatie: \n[VUL de onderstaande informatie in en verwijder alles tussen de vierkante haken, anders wordt dit genegeerd.]\n\n- App-versie: [11.11.11]\n- Android-versie: [Apple 1.16]\n- Apparaatnaam: [Android Apple Phone 69]\n- Installatielocatie: [Github, Fdroid, Obtanium, Tesla Space Station]\n\nUw snelle aandacht voor deze kwestie wordt zeer op prijs gesteld.\n\nDank u wel.\n</string>
     <string name="admin_permission_message">mLauncher belooft verantwoord om te gaan met de machtigingen voor het vergrendelscherm. mLauncher verzamelt of deelt geen gegevens.</string>
+    <string name="work_permission_message">U moet de Werkprofielbeheerder gebruiken om deze actie uit te voeren.</string>
     <string-array name="alignment_options">
         <item>Links</item>
         <item>Midden</item>
